axa/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: insurance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: sachin820/backend:v3
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: insurance
spec:
  selector:
    app: backend
  ports:
  - port: 8080
